--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -8,36 +8,34 @@
       android:translateX="7.2"
       android:translateY="7.2">
   	<path
-  		android:fillColor="#00FF5F20"
+  		android:fillColor="#FF000000"
   		android:strokeColor="#FF000000"
   		android:strokeWidth="1.8000001"
   		android:strokeLineJoin="miter"
   		android:fillType="nonZero"
   		android:strokeLineCap="square"
-  		android:pathData="M3.75,1.00L20.25,1.00A2.75 2.75 0 0 1 23.00,3.75L23.00,20.25A2.75 2.75 0 0 1 20.25,23.00L3.75,23.00A2.75 2.75 0 0 1 1.00,20.25L1.00,3.75A2.75 2.75 0 0 1 3.75,1.00z"/>
+  		android:pathData="M3.50,2.00L20.50,2.00A2.50 2.50 0 0 1 23.00,4.50L23.00,19.50A2.50 2.50 0 0 1 20.50,22.00L3.50,22.00A2.50 2.50 0 0 1 1.00,19.50L1.00,4.50A2.50 2.50 0 0 1 3.50,2.00z"/>
   	<path
-  		android:fillColor="#00FFFFFF"
+  		android:fillColor="#FFFF8608"
   		android:strokeColor="#FF000000"
-  		android:strokeWidth="1.92"
+  		android:strokeWidth="1.4399999"
+  		android:strokeLineJoin="miter"
+  		android:fillType="nonZero"
+  		android:strokeLineCap="square"
+  		android:pathData="M12.00,19.75L17.25,12.25L22.00,19.75"/>
+  	<path
+  		android:fillColor="#FFFF8500"
+  		android:strokeColor="#FF000000"
+  		android:strokeWidth="1.4399999"
+  		android:strokeLineJoin="miter"
+  		android:fillType="nonZero"
+  		android:strokeLineCap="round"
+  		android:pathData="M2.50,20.00L9.50,10.00L15.50,20.00"/>
+  	<path
+  		android:fillColor="#FFFF8608"
   		android:strokeLineJoin="round"
   		android:fillType="nonZero"
   		android:strokeLineCap="round"
-  		android:pathData="M2.00,22.00L9.00,12.00L16.00,23.00"/>
-  	<path
-  		android:fillColor="#00FFFFFF"
-  		android:strokeColor="#FF000000"
-  		android:strokeWidth="1.92"
-  		android:strokeLineJoin="round"
-  		android:fillType="nonZero"
-  		android:strokeLineCap="round"
-  		android:pathData="M15.00,20.00L18.00,16.00L22.00,22.00"/>
-  	<path
-  		android:fillColor="#00000000"
-  		android:strokeColor="#FF000000"
-  		android:strokeWidth="1.56"
-  		android:strokeLineJoin="round"
-  		android:fillType="nonZero"
-  		android:strokeLineCap="round"
-  		android:pathData="M18.00,3.62C19.31,3.62,20.38,4.69,20.38,6.00C20.38,7.31,19.31,8.38,18.00,8.38C16.69,8.38,15.62,7.31,15.62,6.00C15.62,4.69,16.69,3.62,18.00,3.62z"/>
+  		android:pathData="M18.00,3.81C19.21,3.81,20.19,4.79,20.19,6.00C20.19,7.21,19.21,8.19,18.00,8.19C16.79,8.19,15.81,7.21,15.81,6.00C15.81,4.79,16.79,3.81,18.00,3.81z"/>
   </group>
 </vector>
