--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,56 +5,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.MainActivity"
+    tools:targetApi="o">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp">
-        
+        android:paddingVertical="8dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/logo_icon"
+            android:layout_width="@dimen/actionBarItemSize"
+            android:layout_height="@dimen/actionBarItemSize"
+            android:importantForAccessibility="no"
+            android:padding="5dp"
+            android:src="@drawable/app_icon" />
+
         <TextView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:fontFamily="@font/aoboshi_one"
+            android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:text="@string/app_name" />
+            android:textColor="?attr/colorOnBackground"
+            tools:ignore="RtlHardcoded" />
 
-        <com.google.android.material.search.SearchBar
-            android:id="@+id/search_bar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintHeight_max="48dp"
-            app:layout_constraintWidth_max="500dp"
-            app:layout_constraintLeft_toRightOf="@id/logo"
-            app:layout_constraintRight_toLeftOf="@id/add"
-            app:layout_constraintHorizontal_bias="0"
-            android:layout_marginHorizontal="48dp"
-            app:defaultMarginsEnabled="false"
-            android:text="Search Photos" />
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="48dp">
+
+            <com.google.android.material.search.SearchBar
+                android:id="@+id/search_bar"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintWidth_max="500dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:defaultMarginsEnabled="false"
+                app:layout_constraintHorizontal_bias="0"
+                android:text="@string/search_photos" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
+            style="@style/ImageButtonCircle"
             android:id="@+id/add"
-            style="@style/ImageButtonCircle"
-            app:layout_constraintRight_toLeftOf="@id/account"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/ic_close" />
+            android:layout_width="@dimen/actionBarItemSize"
+            android:layout_height="@dimen/actionBarItemSize"
+            android:layout_marginRight="8dp"
+            android:tooltipText="@string/add"
+            android:contentDescription="@string/add"
+            android:src="@drawable/ic_add"
+            tools:ignore="RtlHardcoded" />
 
         <ImageView
-            android:id="@+id/account"
             style="@style/ImageButtonCircle"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/ic_close" />
+            android:id="@+id/account"
+            android:layout_width="@dimen/actionBarItemSize"
+            android:layout_height="@dimen/actionBarItemSize"
+            android:tooltipText="@string/quick_settings"
+            android:contentDescription="@string/quick_settings"
+            android:src="@drawable/ic_account_circle_outlined"
+            app:tint="?attr/colorPrimary" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/toolbar_divider"
