--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity"
     tools:targetApi="o">
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/tabs" />
 
     <LinearLayout
         android:id="@+id/toolbar"
@@ -22,7 +16,8 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="8dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="?attr/colorSurfaceContainerLow">
 
         <ImageView
             android:id="@+id/logo_icon"
@@ -36,8 +31,8 @@
             android:id="@+id/logo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginLeft="16dp"
+            android:layout_weight="1"
             android:fontFamily="@font/aoboshi_one"
             android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
@@ -57,18 +52,6 @@
 
         <ImageView
             style="@style/ImageButtonCircle"
-            android:id="@+id/search_button"
-            android:layout_width="@dimen/actionBarItemSize"
-            android:layout_height="@dimen/actionBarItemSize"
-            android:layout_marginRight="8dp"
-            android:tooltipText="@string/search"
-            android:contentDescription="@string/search"
-            android:padding="11dp"
-            android:src="@drawable/ic_search_outlined"
-            tools:ignore="RtlHardcoded" />
-
-        <ImageView
-            style="@style/ImageButtonCircle"
             android:id="@+id/account"
             android:layout_width="@dimen/actionBarItemSize"
             android:layout_height="@dimen/actionBarItemSize"
@@ -79,18 +62,45 @@
 
     </LinearLayout>
 
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/toolbar_divider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toRightOf="@id/navigation"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="64dp"
+        tools:ignore="RtlHardcoded">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <com.google.android.material.search.SearchBar
+            android:id="@+id/search_bar"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintWidth_max="500dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:defaultMarginsEnabled="false"
+            app:layout_constraintHorizontal_bias="0"
+            android:text="@string/search_photos" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="235dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/tabs"
-        tools:viewBindingType="com.google.android.material.navigation.NavigationBarView" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:menu="@menu/tabs" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/navigation"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
